# lifo-project

./: Dockerfile  README.md  conn_test.py  docker-compose.yml  lifo_project_structure.md  pyproject.toml  requirements.txt
app/: main.py
app/config/: __init__.py
app/database/: connection.py  loader.py
app/models/: __init__.py  batch.py  movement.py  product.py  scoring.py  store.py  supplier.py
app/utils/: data_generator.py
database/: 00-init-timescaledb.sh  01-init.sql  init_database.sql  trigger.sql
docs/: database_erd.md
scripts/: docker-manage.ps1  generate_test_data.ps1
